--- a/index.html
+++ b/index.html
@@ -1,102 +1,105 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Accueil Ohmyfood</title>
     <script
       src="https://kit.fontawesome.com/0b1f72f67c.js"
       crossorigin="anonymous"
     ></script>
-</head>
-<body>
+  </head>
+  <body>
     <!-- HEADER  -->
     <!-- LOGO  -->
-<header>
-    <h1 id="logo">ohmyfood</h1>
-</header>
+    <header>
+      <h1 id="logo">ohmyfood</h1>
+    </header>
 
-<main>
-    <!-- RECHERCHE  -->
-    <form id="search">
+    <main>
+      <!-- RECHERCHE  -->
+      <form id="search">
         <i class="fas fa-map-marker-alt fa-sm"></i>
-        <input type="search" placeholder="Paris, Belleville">
-    </form>
+        <input type="search" placeholder="Paris, Belleville" />
+      </form>
 
-    <!-- EXPLORER NOS RESATUARANTS  -->
-    <section class="intro">
+      <!-- EXPLORER NOS RESATUARANTS  -->
+      <section class="intro">
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
         <a href="#list-restaurant">
-            <button type="button" class="btn-cta">Explorer nos restaurants</button>
+          <button type="button" class="btn-cta">
+            Explorer nos restaurants
+          </button>
         </a>
-    </section>
+      </section>
 
-    <!-- FONTIONNEMENT  -->
-    <section class="fontion">
-        <h2>Fonctionnement</h2>
-        <div class="fonction-item">
-            <div class="fonction-item_number"><p>1</p></div>
-            <div class="icon"><i class="fas fa-mobile-alt fa-sm"></i></div>
-            <p>Choisissez un restaurant</p>
+      <!-- FONTIONNEMENT  -->
+      <section class="fonction">
+        <div class="container">
+          <h2>Fonctionnement</h2>
+          <ol class="fonction-list">
+            <li class="fonction-item">
+              <i class="fas fa-mobile-alt fa-lg"></i>
+              <span class="fonction-txt">Choisissez un restaurant</span>
+            </li>
+            <li class="fonction-item">
+              <i class="fas fa-list-ul fa-lg"></i>
+              <span class="fonction-txt">Composez votre menu</span>
+            </li>
+            <li class="fonction-item">
+              <i class="fas fa-store fa-lg"></i>
+              <span class="fonction-txt">Dégustez au restaurant</span>
+            </li>
+          </ol>
         </div>
-        <div class="fonction-item">
-            <div class="fonction-item_number"><p>2</p></div>
-            <div class="icon"><i class="fas fa-list-ul fa-sm"></i></div>
-            <p>Composez votre menu</p>
-        </div>
-        <div class="fonction-item">
-            <div class="fonction-item_number"><p>3</p></div>
-            <div class="icon"><i class="fas fa-store fa-sm"></i></div>
-            <p>Dégustez au restaurant</p>
-        </div>
-    </section>
+      </section>
 
-    <!-- RESTAURANTS  -->
-    <section id="list-restaurant">
+      <!-- RESTAURANTS  -->
+      <section id="list-restaurant">
         <h2>Restaurants</h2>
         <a href="lapalette.html" class="restauContainer">
-            <div class="restauImg"><img src="" alt=""></div>
-            <div class="restauCaption">
-                <p><b>La palette du goût</b><br>Ménilmontant</p>
-                <div class="heartContainer"><i class="far fa-heart"></i></div>
-            </div>
+          <div class="restauImg"><img src="" alt="" /></div>
+          <div class="restauCaption">
+            <p><b>La palette du goût</b><br />Ménilmontant</p>
+            <div class="heartContainer"><i class="far fa-heart"></i></div>
+          </div>
         </a>
         <a href="" class="restauContainer">
-            <div class="restauImg"><img src="" alt=""></div>
-            <div class="restauCaption">
-                <p><b>La note enchantée</b><br>Charonne</p>
-                <div class="heartContainer"><i class="far fa-heart"></i></div>
-            </div>
+          <div class="restauImg"><img src="" alt="" /></div>
+          <div class="restauCaption">
+            <p><b>La note enchantée</b><br />Charonne</p>
+            <div class="heartContainer"><i class="far fa-heart"></i></div>
+          </div>
         </a>
         <a href="" class="restauContainer">
-            <div class="restauImg"><img src="" alt=""></div>
-            <div class="restauCaption">
-                <p><b>&Agrave; la française</b><br>Cité Rouge</p>
-                <div class="heartContainer"><i class="far fa-heart"></i></div>
-            </div>
+          <div class="restauImg"><img src="" alt="" /></div>
+          <div class="restauCaption">
+            <p><b>&Agrave; la française</b><br />Cité Rouge</p>
+            <div class="heartContainer"><i class="far fa-heart"></i></div>
+          </div>
         </a>
         <a href="" class="restauContainer">
-            <div class="restauImg"><img src="" alt=""></div>
-            <div class="restauCaption">
-                <p><b>Le délice des sens</b><br>Folie Méricourt</p>
-                <div class="heartContainer"><i class="far fa-heart"></i></div>
-            </div>
+          <div class="restauImg"><img src="" alt="" /></div>
+          <div class="restauCaption">
+            <p><b>Le délice des sens</b><br />Folie Méricourt</p>
+            <div class="heartContainer"><i class="far fa-heart"></i></div>
+          </div>
         </a>
-    </section>
-</main>
+      </section>
+    </main>
 
     <!-- FOOTER  -->
     <footer>
-        <div><img src="" alt=""></div>
-        <div class="iconFooterContainer"><i class="fas fa-utensils"></i></div>
-        <div class="iconFooterContainer"><i class="fas fa-hands-helping"></i></div>
-        <p><a href="">Mentions légales</a></p>
-        <p><a href="">Contact</a></p>
+      <div><img src="" alt="" /></div>
+      <div class="iconFooterContainer"><i class="fas fa-utensils"></i></div>
+      <div class="iconFooterContainer">
+        <i class="fas fa-hands-helping"></i>
+      </div>
+      <p><a href="">Mentions légales</a></p>
+      <p><a href="">Contact</a></p>
     </footer>
-
-
-</body>
+  </body>
 </html>
