La palette du gout - entrées - une seule animation

--- a/header.html
+++ b/header.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <!-- LOGO  -->
-    <header>
-        <h1 id="logo">ohmyfood</h1>
+    <header class="mainHeader">
+        <a href="./index.html"><h1 id="logo">ohmyfood</h1></a>
     </header>
 </body>
 </html>
