Animation coeur, réorganisation html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </form>
 
       <!-- EXPLORER NOS RESATUARANTS  -->
+    <div class="accueil">
       <section class="intro">
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
@@ -54,6 +55,7 @@
           </ol>
         </div>
       </section>
+    </div>
 
       <!-- RESTAURANTS  -->
       <section id="list-restaurant">
@@ -68,7 +70,10 @@
             </div>
             <figcaption class="restauCaption">
               <p><b>La palette du goût</b><br />Ménilmontant</p>
-              <div class="heartContainer"><i class="far fa-heart fa-2x"></i></div>
+              <div class="favIcon">
+                <i class="far fa-heart fa-2x like like-empty" aria-hidden="true"></i>
+                <i class="fas fa-heart fa-2x like like-full" aria-hidden="true"></i>
+              </div>
             </figcaption>
             <span class="new">Nouveau</span>
           </figure>
@@ -83,7 +88,10 @@
             </div>
             <figcaption class="restauCaption">
               <p><b>La note enchantée</b><br />Charonne</p>
-              <div class="heartContainer"><i class="far fa-heart fa-2x"></i></div>
+              <div class="favIcon">
+                <i class="far fa-heart fa-2x like like-empty" aria-hidden="true"></i>
+                <i class="fas fa-heart fa-2x like like-full" aria-hidden="true"></i>
+              </div>
             </figcaption>
             <span class="new">Nouveau</span>
           </figure>
@@ -98,7 +106,10 @@
             </div>
             <figcaption class="restauCaption">
               <p><b>&Agrave; la française</b><br />Cité Rouge</p>
-              <div class="heartContainer"><i class="far fa-heart fa-2x"></i></div>
+              <div class="favIcon">
+                <i class="far fa-heart fa-2x like like-empty" aria-hidden="true"></i>
+                <i class="fas fa-heart fa-2x like like-full" aria-hidden="true"></i>
+              </div>            
             </figcaption>
           </figure>
         </a>
@@ -112,7 +123,10 @@
             </div>
             <figcaption class="restauCaption">
               <p><b>Le délice des sens</b><br />Folie Méricourt</p>
-              <div class="heartContainer"><i class="far fa-heart fa-2x"></i></div>
+              <div class="favIcon">
+                <i class="far fa-heart fa-2x like like-empty" aria-hidden="true"></i>
+                <i class="fas fa-heart fa-2x like like-full" aria-hidden="true"></i>
+              </div>            
             </figcaption>
           </figure>
         </a>
