--- a/lapalette.html
+++ b/lapalette.html
@@ -23,27 +23,30 @@
 
     <!-- LE MENU  -->
     <section class="menuContainer">
-      <div class="RestauName">
+      <header class="restauName">
         <h2>La palette du goût</h2>
-        <span><i class="far fa-heart fa-lg"></i></span>
-      </div>
+        <div class="favIcon">
+          <i class="far fa-heart fa-2x like like-empty" aria-hidden="true"></i>
+          <i class="fas fa-heart fa-2x like like-full" aria-hidden="true"></i>
+        </div> 
+      </header>
 
       <section class="menus">
         <!-- ENTREES  -->
         <h3 class="menu-title">ENTR&Eacute;ES</h3>
         <div class="menu">
-            <div class="item-card card0">
+            <div class="item-card card1">
                 <p><span class="item-name">Fricassée d'escargot</span><br>Au piment d'espelette</p>
                 <p class="item-price">25€</p>
                 <!-- <span class="item-select">
                     <i class="fas fa-check-circle fa-lg item-select-icon"></i>
                 </span> -->
             </div>
-            <div class="item-card card1">
+            <div class="item-card card2">
                 <p><span class="item-name">Foie gras de canard mi-cuit</span><br>Et ses copeaux de truffe noire</p>
                 <p class="item-price">35€</p>            
             </div>
-            <div class="item-card card2">
+            <div class="item-card card3">
                 <p><span class="item-name">Oeuf au plat</span><br>Assaisonné à la truffe sur lit de caviar</p>
                 <p class="item-price">20€</p>           
             </div>
