--- a/footer.html
+++ b/footer.html
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <script
-    src="https://kit.fontawesome.com/0b1f72f67c.js"
-    crossorigin="anonymous"
-  ></script>
-    <title>Document</title>
-  </head>
-  <body>
-    <footer>
+
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="https://kit.fontawesome.com/0b1f72f67c.js" crossorigin="anonymous"></script>
+
+  <footer>
       <a href="#"><p id="logo">ohmyfood</p></a>
       <div class="iconFootContainer">
         <i class="fas fa-utensils fa-xs icon7"></i>
@@ -25,5 +15,3 @@
       <a href="#"><p class="txtFooter">Mentions légales</p></a>
       <a href="#"><p class="txtFooter">Contact</p></a>
     </footer>
-  </body>
-</html>
