--- a/lapalette.html
+++ b/lapalette.html
@@ -155,8 +155,19 @@
     </section>
     
     <!-- FOOTER  -->
-    <object data="footer.html" type="text/html"></object>
-  
+    <footer>
+      <a href="#"><p id="logo">ohmyfood</p></a>
+      <div class="iconFootContainer">
+        <i class="fas fa-utensils fa-xs icon7"></i>
+        <span class="txtFooter"><a href="#">Proposer un restaurant</a></span>
+      </div>
+      <div class="iconFootContainer">
+        <i class="fas fa-hands-helping fa-xs icon5"></i>
+        <span class="txtFooter"><a href="#">Devenir partenaire</a></span>
+      </div>
+      <a href="#"><p class="txtFooter">Mentions légales</p></a>
+      <a href="#"><p class="txtFooter">Contact</p></a>
+    </footer>  
 
   </body>
 </html>
