--- a/francaise.html
+++ b/francaise.html
@@ -9,7 +9,7 @@
     src="https://kit.fontawesome.com/0b1f72f67c.js"
     crossorigin="anonymous"
   ></script>
-    <title>La palette du goût - Ohmyfood</title>
+    <title>&Agrave; la française - Ohmyfood</title>
   </head>
   <body>
     <header class="restauHeader">
@@ -19,13 +19,13 @@
     </header>
 
     <section class="banner">
-        <img src="public/images/restaurants/lapalettedugout.jpg" alt="La Palette du goût sur Ohmyfood">
+        <img src="public/images/restaurants/alafrancaise.jpg" alt="La Palette du goût sur Ohmyfood">
     </section>
 
     <!-- LE MENU  -->
     <section class="menuContainer">
       <header class="restauName">
-        <h2>La palette du goût</h2>
+        <h2>&Agrave; la française</h2>
         <div class="favIcon">
           <i class="far fa-heart fa-2x fav fav-empty" aria-hidden="true"></i>
           <i class="fas fa-heart fa-2x fav fav-full" aria-hidden="true"></i>
@@ -40,8 +40,8 @@
           <div class="item-appear">
             <div class="item-card card1"> 
               <div class="item-txt"> 
-                <p class="item-name">Fricassée d'escargot</p> 
-                <p class="item-desc">Au piment d'espelette</p> 
+                <p class="item-name">Tartare de poulpe acidulé</p> 
+                <p class="item-desc">Aux zestes d'orange</p> 
               </div>
               <div class="item-price">25€</div> 
               <div class="item-select"> 
@@ -53,8 +53,8 @@
           <div class="item-appear">
             <div class="item-card card2"> 
               <div class="item-txt"> 
-                <p class="item-name">Foie gras de canard mi-cuit</p> 
-                <p class="item-desc">Et ses copeaux de truffe noire</p> 
+                <p class="item-name">Velouté de légumes d'antan</p> 
+                <p class="item-desc">Carotte, panais, topinambour</p> 
               </div>
               <div class="item-price">35€</div> 
               <div class="item-select"> 
@@ -66,8 +66,8 @@
           <div class="item-appear">
             <div class="item-card card3"> 
               <div class="item-txt"> 
-                <p class="item-name">Oeuf au plat</p> 
-                <p class="item-desc">Assaisonné à la truffe sur lit de caviar</p> 
+                <p class="item-name">Soupe à l'oignon</p> 
+                <p class="item-desc">Revisitée</p> 
               </div>
               <div class="item-price">20€</div> 
               <div class="item-select"> 
@@ -84,8 +84,8 @@
           <div class="item-appear">
             <div class="item-card card5"> 
               <div class="item-txt"> 
-                <p class="item-name">Filet de boeuf aux herbes</p> 
-                <p class="item-desc">Accompagné de sa ribambelle de légumes</p> 
+                <p class="item-name">Coquilles Saint-Jacques</p> 
+                <p class="item-desc">Accompagnées d'une purée de panais</p> 
               </div>
               <div class="item-price">40€</div> 
               <div class="item-select"> 
@@ -97,8 +97,8 @@
           <div class="item-appear">
             <div class="item-card card6"> 
               <div class="item-txt"> 
-                <p class="item-name">Parmentier de queue de boeuf</p> 
-                <p class="item-desc">&Agrave; la truffe noire sur sa purée de panais</p> 
+                <p class="item-name">Magret de canard</p> 
+                <p class="item-desc">Et parmentier de pommes de terre</p> 
               </div>
               <div class="item-price">35€</div> 
               <div class="item-select"> 
@@ -110,8 +110,8 @@
           <div class="item-appear">
             <div class="item-card card7"> 
               <div class="item-txt"> 
-                <p class="item-name">Filet de turbot</p> 
-                <p class="item-desc">Aux agrumes</p> 
+                <p class="item-name">Pigeonneau d’Ille-et-Vilaine</p> 
+                <p class="item-desc">Sur son lit de gnocchis aux légumes</p> 
               </div>
               <div class="item-price">44€</div> 
               <div class="item-select"> 
@@ -128,8 +128,8 @@
           <div class="item-appear">
             <div class="item-card card8"> 
               <div class="item-txt"> 
-                <p class="item-name">Paris-Brest</p> 
-                <p class="item-desc">Revisité</p> 
+                <p class="item-name">Pétales de violettes glacés</p> 
+                <p class="item-desc">Et purée de noisettes</p> 
               </div>
               <div class="item-price">18€</div> 
               <div class="item-select"> 
@@ -141,8 +141,8 @@
           <div class="item-appear">
             <div class="item-card card9"> 
               <div class="item-txt"> 
-                <p class="item-name">Macaron au chocolat d'exception</p> 
-                <p class="item-desc">Et glace à la vanille de Madagascar</p> 
+                <p class="item-name">Fondant au chocolat</p> 
+                <p class="item-desc">Revisité</p> 
               </div>
               <div class="item-price">22€</div> 
               <div class="item-select"> 
@@ -154,8 +154,8 @@
           <div class="item-appear">
             <div class="item-card card10"> 
               <div class="item-txt"> 
-                <p class="item-name">Mousse au chocolat</p> 
-                <p class="item-desc">Au piment d'Espelette et à la truffe noire</p> 
+                <p class="item-name">Millefeuille croustillant</p> 
+                <p class="item-desc">Myrtilles et pâte d’amande</p> 
               </div>
               <div class="item-price">23€</div> 
               <div class="item-select"> 
