--- a/noteenchantee.html
+++ b/noteenchantee.html
@@ -9,7 +9,7 @@
     src="https://kit.fontawesome.com/0b1f72f67c.js"
     crossorigin="anonymous"
   ></script>
-    <title>La palette du goût - Ohmyfood</title>
+    <title>La note enchantée - Ohmyfood</title>
   </head>
   <body>
     <header class="restauHeader">
@@ -19,13 +19,13 @@
     </header>
 
     <section class="banner">
-        <img src="public/images/restaurants/lapalettedugout.jpg" alt="La Palette du goût sur Ohmyfood">
+        <img src="public/images/restaurants/lanoteenchantee.jpg" alt="La Palette du goût sur Ohmyfood">
     </section>
 
     <!-- LE MENU  -->
     <section class="menuContainer">
       <header class="restauName">
-        <h2>La palette du goût</h2>
+        <h2>La note enchantée</h2>
         <div class="favIcon">
           <i class="far fa-heart fa-2x fav fav-empty" aria-hidden="true"></i>
           <i class="fas fa-heart fa-2x fav fav-full" aria-hidden="true"></i>
@@ -40,8 +40,8 @@
           <div class="item-appear">
             <div class="item-card card1"> 
               <div class="item-txt"> 
-                <p class="item-name">Fricassée d'escargot</p> 
-                <p class="item-desc">Au piment d'espelette</p> 
+                <p class="item-name">Ravioles de foie gras</p> 
+                <p class="item-desc">Accompagnés de leur crème à la truffe</p> 
               </div>
               <div class="item-price">25€</div> 
               <div class="item-select"> 
@@ -53,8 +53,8 @@
           <div class="item-appear">
             <div class="item-card card2"> 
               <div class="item-txt"> 
-                <p class="item-name">Foie gras de canard mi-cuit</p> 
-                <p class="item-desc">Et ses copeaux de truffe noire</p> 
+                <p class="item-name">Caviar osciètre</p> 
+                <p class="item-desc">Sur blini à la farine de blé noir</p> 
               </div>
               <div class="item-price">35€</div> 
               <div class="item-select"> 
@@ -66,10 +66,23 @@
           <div class="item-appear">
             <div class="item-card card3"> 
               <div class="item-txt"> 
-                <p class="item-name">Oeuf au plat</p> 
-                <p class="item-desc">Assaisonné à la truffe sur lit de caviar</p> 
+                <p class="item-name">Homard et espuma de potiron</p> 
+                <p class="item-desc">Mariné aux zestes d'orange</p> 
               </div>
               <div class="item-price">20€</div> 
+              <div class="item-select"> 
+                  <i class="fas fa-check-circle fa-lg" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div> 
+
+          <div>
+            <div class="item-card card4"> 
+              <div class="item-txt"> 
+                <p class="item-name">Foie gras de canard cuit entier</p> 
+                <p class="item-desc">Confiture de figue et pain toasté</p> 
+              </div>
+              <div class="item-price">35€</div> 
               <div class="item-select"> 
                   <i class="fas fa-check-circle fa-lg" aria-hidden="true"></i>
               </div>
@@ -84,8 +97,8 @@
           <div class="item-appear">
             <div class="item-card card5"> 
               <div class="item-txt"> 
-                <p class="item-name">Filet de boeuf aux herbes</p> 
-                <p class="item-desc">Accompagné de sa ribambelle de légumes</p> 
+                <p class="item-name">Noix de coquilles Saint-Jacques</p> 
+                <p class="item-desc">Sur lit de purée de céleri-rave</p> 
               </div>
               <div class="item-price">40€</div> 
               <div class="item-select"> 
@@ -97,8 +110,8 @@
           <div class="item-appear">
             <div class="item-card card6"> 
               <div class="item-txt"> 
-                <p class="item-name">Parmentier de queue de boeuf</p> 
-                <p class="item-desc">&Agrave; la truffe noire sur sa purée de panais</p> 
+                <p class="item-name">Langoustine poêlée</p> 
+                <p class="item-desc">Purée de patate douce</p> 
               </div>
               <div class="item-price">35€</div> 
               <div class="item-select"> 
@@ -110,8 +123,8 @@
           <div class="item-appear">
             <div class="item-card card7"> 
               <div class="item-txt"> 
-                <p class="item-name">Filet de turbot</p> 
-                <p class="item-desc">Aux agrumes</p> 
+                <p class="item-name">Mijoté de queue de boeuf</p> 
+                <p class="item-desc">Et riz sauvage aux zestes de citron</p> 
               </div>
               <div class="item-price">44€</div> 
               <div class="item-select"> 
@@ -128,8 +141,8 @@
           <div class="item-appear">
             <div class="item-card card8"> 
               <div class="item-txt"> 
-                <p class="item-name">Paris-Brest</p> 
-                <p class="item-desc">Revisité</p> 
+                <p class="item-name">Macaron noisette et chocolat</p> 
+                <p class="item-desc">Glace au caramel brun et sel de Guérande</p> 
               </div>
               <div class="item-price">18€</div> 
               <div class="item-select"> 
@@ -141,8 +154,8 @@
           <div class="item-appear">
             <div class="item-card card9"> 
               <div class="item-txt"> 
-                <p class="item-name">Macaron au chocolat d'exception</p> 
-                <p class="item-desc">Et glace à la vanille de Madagascar</p> 
+                <p class="item-name">Baba au rhum revisité </p> 
+                <p class="item-desc">Avec son coulis de citron</p> 
               </div>
               <div class="item-price">22€</div> 
               <div class="item-select"> 
@@ -154,8 +167,8 @@
           <div class="item-appear">
             <div class="item-card card10"> 
               <div class="item-txt"> 
-                <p class="item-name">Mousse au chocolat</p> 
-                <p class="item-desc">Au piment d'Espelette et à la truffe noire</p> 
+                <p class="item-name">Tarte au citron meringuée</p> 
+                <p class="item-desc">Déstructurée</p> 
               </div>
               <div class="item-price">23€</div> 
               <div class="item-select"> 
