mail to - email page contact

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <span class="txtFooter"><a href="#">Devenir partenaire</a></span>
       </div>
       <a href="#"><p class="txtFooter">Mentions légales</p></a>
-      <a href="#"><p class="txtFooter">Contact</p></a>
+      <a href="mailto:bonjour@ohmyfood.fr"><p class="txtFooter">Contact</p></a>
     </footer>
   </body>
 </html>
