Réglage de l'animation Coeur - remplissage progressif

--- a/noteenchantee.html
+++ b/noteenchantee.html
@@ -27,8 +27,8 @@
       <header class="restauName">
         <h2>La note enchantée</h2>
         <div class="favIcon">
-          <i class="far fa-heart fa-2x fav fav-empty" aria-hidden="true"></i>
-          <i class="fas fa-heart fa-2x fav fav-full" aria-hidden="true"></i>
+          <i class="far fa-heart fa-2x favRestau fav-empty" aria-hidden="true"></i>
+          <i class="fas fa-heart fa-2x favRestau" aria-hidden="true"></i>
         </div> 
       </header>
 
