--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- HEADER  -->
     <!-- LOGO  -->
     <header class="mainHeader">
-      <a href="index.html"><h1 id="logo">ohmyfood</h1></a>
+      <a href="index.html"><h1 class="logo">ohmyfood</h1></a>
     </header>
     <main>
       <!-- RECHERCHE  -->
@@ -36,10 +36,8 @@
           <p>
             Découvrez des restaurants d'exception, sélectionnés par nos soins
           </p>
-          <a href="#list-restaurant">
-            <button type="button" class="btn-cta">
+          <a href="#list-restaurant" class="btn-cta">
               Explorer nos restaurants
-            </button>
           </a>
         </section>
 
@@ -70,7 +68,7 @@
         <h2>Restaurants</h2>
         <div class="list-restaurant__Card">
             <div class="restauContainer">
-              <figure>
+              <div>
                 <div class="restauImg">
                   <a href="lapalette.html">
                     <img
@@ -78,7 +76,7 @@
                       alt="la palette du goût"
                   /></a>
                 </div>
-                <figcaption class="restauCaption">
+                <div class="restauCaption">
                   <p>
                     <a href="lapalette.html"
                       ><b>La palette du goût</b><br />Ménilmontant</a
@@ -94,12 +92,12 @@
                       aria-hidden="true"
                     ></i>
                   </div>
-                </figcaption>
-                <span class="new">Nouveau</span>
-              </figure>
+                </div>
+                <p class="new">Nouveau</p>
+              </div>
             </div>
             <div class="restauContainer">
-              <figure>
+              <div>
                 <div class="restauImg">
                   <a href="noteenchantee.html">
                     <img
@@ -107,7 +105,7 @@
                       alt="la note enchantée"
                   /></a>
                 </div>
-                <figcaption class="restauCaption">
+                <div class="restauCaption">
                   <p>
                     <a href="noteenchantee.html"
                       ><b>La note enchantée</b><br />Charonne</a
@@ -123,12 +121,12 @@
                       aria-hidden="true"
                     ></i>
                   </div>
-                </figcaption>
-                <span class="new">Nouveau</span>
-              </figure>
+                </div>
+                <p class="new">Nouveau</p>
+              </div>
             </div>
             <div class="restauContainer">
-              <figure>
+              <div>
                 <div class="restauImg">
                   <a href="francaise.html">
                     <img
@@ -136,7 +134,7 @@
                       alt="à la française"
                   /></a>
                 </div>
-                <figcaption class="restauCaption">
+                <div class="restauCaption">
                   <p>
                     <a href="francaise.html"
                       ><b>&Agrave; la française</b><br />Cité Rouge</a
@@ -152,11 +150,11 @@
                       aria-hidden="true"
                     ></i>
                   </div>
-                </figcaption>
-              </figure>
+                </div>
+              </div>
             </div>
             <div class="restauContainer">
-              <figure>
+              <div>
                 <div class="restauImg">
                   <a href="delicesens.html">
                     <img
@@ -164,7 +162,7 @@
                       alt="le délice des sens"
                   /></a>
                 </div>
-                <figcaption class="restauCaption">
+                <div class="restauCaption">
                   <p>
                     <a href="delicesens.html"
                       ><b>Le délice des sens</b><br />Folie Méricourt</a
@@ -180,8 +178,8 @@
                       aria-hidden="true"
                     ></i>
                   </div>
-                </figcaption>
-              </figure>
+                </div>
+              </div>
             </div>
         </div>
       </section>
@@ -189,7 +187,7 @@
 
     <!-- FOOTER  -->
     <footer>
-      <a href="#"><p id="logo">ohmyfood</p></a>
+      <a href="#"><p class="logo">ohmyfood</p></a>
       <div class="iconFootContainer">
         <i class="fas fa-utensils fa-xs icon7"></i>
         <span class="txtFooter"><a href="#">Proposer un restaurant</a></span>
