--- a/lapalette.html
+++ b/lapalette.html
@@ -15,12 +15,12 @@
     <header class="restauHeader">
       <a href="./index.html"><i class="fas fa-arrow-left fa-lg" aria-hidden="true"></i>
       </a>
-      <a href="./index.html"><h1 id="logo">ohmyfood</h1></a>
+      <a href="./index.html"><h1 class="logo">ohmyfood</h1></a>
     </header>
 
-    <section class="banner">
+    <div class="banner">
         <img src="public/images/restaurants/lapalettedugout.jpg" alt="La Palette du goût sur Ohmyfood">
-    </section>
+    </div>
 
     <!-- LE MENU  -->
     <section class="menuContainer">
@@ -166,16 +166,16 @@
         </div>
       </section>
 
-      <section class="cta">
+      <div class="cta">
         <button type="button" class="btn-cta">
         Commander
         </button>
-      </section>
+      </div>
     </section>
     
     <!-- FOOTER  -->
     <footer>
-      <a href="#"><p id="logo">ohmyfood</p></a>
+      <a href="#"><p class="logo">ohmyfood</p></a>
       <div class="iconFootContainer">
         <i class="fas fa-utensils fa-xs icon7"></i>
         <span class="txtFooter"><a href="#">Proposer un restaurant</a></span>
