Correction PC, textes overflow - desc ko

--- a/lapalette.html
+++ b/lapalette.html
@@ -113,7 +113,9 @@
                 <p class="item-name">Filet de turbot</p> 
                 <p class="item-desc">Aux agrumes</p> 
               </div>
-              <div class="item-price">44€</div> 
+              <div class="item-price">
+                <p>44€</p>
+              </div> 
               <div class="item-select"> 
                   <i class="fas fa-check-circle fa-lg" aria-hidden="true"></i>
               </div>
