--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="restauContainer">
               <div>
                 <div class="restauImg">
-                  <a href="lapalette.html">
+                  <a href="la-palette-du-gout.html">
                     <img
                       src="public/images/restaurants/lapalettedugout.jpg"
                       alt="la palette du goût"
@@ -79,7 +79,7 @@
                 </div>
                 <div class="restauCaption">
                   <p>
-                    <a href="lapalette.html"
+                    <a href="la-palette-du-gout.html"
                       ><b>La palette du goût</b><br />Ménilmontant</a
                     >
                   </p>
@@ -100,7 +100,7 @@
             <div class="restauContainer">
               <div>
                 <div class="restauImg">
-                  <a href="noteenchantee.html">
+                  <a href="la-note-enchantee.html">
                     <img
                       src="public/images/restaurants/lanoteenchantee.jpg"
                       alt="la note enchantée"
@@ -108,7 +108,7 @@
                 </div>
                 <div class="restauCaption">
                   <p>
-                    <a href="noteenchantee.html"
+                    <a href="la-note-enchantee.html"
                       ><b>La note enchantée</b><br />Charonne</a
                     >
                   </p>
@@ -129,7 +129,7 @@
             <div class="restauContainer">
               <div>
                 <div class="restauImg">
-                  <a href="francaise.html">
+                  <a href="a-la-francaise.html">
                     <img
                       src="public/images/restaurants/alafrancaise.jpg"
                       alt="à la française"
@@ -137,7 +137,7 @@
                 </div>
                 <div class="restauCaption">
                   <p>
-                    <a href="francaise.html"
+                    <a href="a-la-francaise.html"
                       ><b>&Agrave; la française</b><br />Cité Rouge</a
                     >
                   </p>
@@ -157,7 +157,7 @@
             <div class="restauContainer">
               <div>
                 <div class="restauImg">
-                  <a href="delicesens.html">
+                  <a href="le-delice-des-sens.html">
                     <img
                       src="public/images/restaurants/delicedessens.jpg"
                       alt="le délice des sens"
@@ -165,7 +165,7 @@
                 </div>
                 <div class="restauCaption">
                   <p>
-                    <a href="delicesens.html"
+                    <a href="le-delice-des-sens.html"
                       ><b>Le délice des sens</b><br />Folie Méricourt</a
                     >
                   </p>
